--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <body>
 
     <div class="top-container">
-      <img class="top-cloud" src="F:\Web_Design\CSS-MySite\images\cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images\cloud.png" alt="cloud-img">
       <h1>I'm Vaishali</h1>
       <h2>a <span class="new">new</span> web designer</h2>
-      <img class="bottom-cloud" src="F:\Web_Design\CSS-MySite\images\cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="images\cloud.png" alt="cloud-img">
        <img src="images\mountain.png" alt="mountain-img">
    </div>
    <div class="middle-container">
   <div class="profile">
-    <img class="profilepic" src="file:///F:/Web_Design/CSS-MySite/images/profileimg.svg" alt="">
+    <img class="profilepic" src="images/profileimg.svg" alt="profile-img">
     <h2>Hello.</h2>
     <p class="intro">I am new web designer. Learning web designing from Udemy.And Angela Yu is my trainer.</p>
   </div>
@@ -27,12 +27,12 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="skillimg" src="F:\Web_Design\CSS-MySite\images\skillimg.svg" alt="">
+      <img class="skillimg" src="images\skillimg.svg" alt="skill-img">
       <h3>Web Designing</h3>
       <p>I started to design after a long gap.But now I am loving it and want make my career in this field.</p>
     </div>
     <div class="skill-row">
-      <img class="cookingskill" src="F:\Web_Design\CSS-MySite\images\cookingimg.svg" alt="">
+      <img class="cookingskill" src="images\cookingimg.svg" alt="cooking-img">
       <h3>Cooking</h3>
       <p>Cooking is one of my best skill which I learnt after marrige.</p>
     </div>
